--- a/index.html
+++ b/index.html
@@ -3,9 +3,133 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="assets/styles/main.css">
+    <title>PiedPiperCoin</title>
 </head>
 <body>
-    <h1>It works</h1>
+    <header class="main-header">
+        <div class="container">
+            <div class="main-header_wrapper">
+                <img src="assets/img/header_logo.svg" alt="PPC Logo" class="main-header_logo">
+                <nav class="main-nav">
+                    <ul class="main-nav_list">
+                        <li class="main-nav_list-item">
+                            <a class="main-nav_link" href="#">
+                                the problem
+                            </a>
+                        </li>
+                        <li class="main-nav_list-item">
+                            <a class="main-nav_link" href="#">
+                                PiedPiperCoin
+                            </a>
+                        </li>
+                        <li class="main-nav_list-item">
+                            <a class="main-nav_link" href="#">
+                                the team
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
+    <main class="main">
+        <section class="preview">
+            <h1 calss="preview_heading">PiperNet Is Here</h1>
+        </section>
+        <section class="problem">
+            <div class="container">
+                <header class="problem_header">
+                    <h2 class="problem_heading">The Problem</h2>
+                </header>
+                <div class="content">
+                    <p class="content_regular-text">
+                        Beneath the flashy homepages of your favorite sites lurk Hooli™ and other evil corporations out to hoard and sell your most personal data.
+                    </p>
+                    <p class="content_regular-text">
+                        What was built to be the ultimate platform for the free sharing of knowledge has turned into a money-hungry monster feasting on our privacy and freedom.
+                    </p>
+                    <p class="content_regular-text">
+                        <span class="content_breack-line">
+                            But fear not, for Pied Piper has the answer! And it’s simple:
+                        </span>
+                        An autonomous peer-to-peer network featuring distributed storage powered by universal compression, accelerated scheduling allocation, and end-to-end encryption.
+                    </p>
+                    <p class="content_regular-text">Put even simpler — <strong>it’s the internet, completely decentralized</strong>.</p>
+                </div>
+            </div>
+        </section>
+        <section class="hero">
+            <div class="container hero_more-padding">
+                <p class="hero_regular-text">
+                    <em>
+                        We’re in this together! All of our computers and phones join in a network to make the strongest supercomputer the world has ever seen.
+                    </em>
+                </p>
+            </div>
+        </section>
+        <section class="introduction">
+            <div class="container">
+                <header class="introduction_header">
+                    <h2 class="introduction_heading">
+                        Introducing PiedPiperCoin
+                    </h2>
+                </header>
+                <img src="./assets/img/logo.svg" alt="PPC full logo" class="introduction_logo">
+                <p class="introduction_regular-text">
+                    Pied Piper's new internet is built for users, by users. You supply the storage, compute, and networking resources that power our entire decentralized web.
+                </p>
+                <p class="introduction_regular-text">
+                    Now there's a way to give credit where credit is due. Compute credit, that is! The more you share your device resources, the more PiedPiperCoin you receive.
+                </p>
+                <p class="introduction_regular-text">
+                    Whether you're a developer with an app ready for market, or just an Average Joe with a smartphone you'll love all you can do with PiedPiperCoin.
+                </p>
+            </div>
+        </section>
+        <section class="team">
+            <div class="container">
+                <div class="team_wrapper">
+                    <div class="team_personal-card">
+                        <img src="./assets/img/team1.png" alt="Richard Hendricks photo" class="team_personal-card_person">
+                        <h3 class="team_person-name">Richard Hendricks</h3>
+                        <p class="team_person-position">Founder & CEO</p>
+                    </div>
+                    <div class="team_personal-card">
+                        <img src="./assets/img/team2.png" alt="Dinesh Chugtai photo" class="team_personal-card_person">
+                        <h3 class="team_person-name">Dinesh Chugtai</h3>
+                        <p class="team_person-position">Senior Programmer</p>
+                    </div>
+                    <div class="team_personal-card">
+                        <img src="./assets/img/team3.png" alt="Bertram Gilfoyle photo" class="team_personal-card_person">
+                        <h3 class="team_person-name">Bertram Gilfoyle</h3>
+                        <p class="team_person-position">Chief Systems Architect</p>
+                    </div>
+                    <div class="team_personal-card">
+                        <img src="./assets/img/team4.png" alt="Jared Dunn photo" class="team_personal-card_person">
+                        <h3 class="team_person-name">Jared Dunn</h3>
+                        <p class="team_person-position">Chief Operating Officer</p>
+                    </div>
+                    <div class="team_personal-card">
+                        <img src="./assets/img/team5.png" alt="Monica Hall photo" class="team_personal-card_person">
+                        <h3 class="team_person-name">Monica Hall</h3>
+                        <p class="team_person-position">Chief Financial Officer</p>
+                    </div>
+                    <div class="team_personal-card">
+                        <img src="./assets/img/team6.png" alt="Nelson Bighetti photo" class="team_personal-card_person">
+                        <h3 class="team_person-name">Nelson Bighetti</h3>
+                        <p class="team_person-position">Majority Investor</p>
+                    </div> 
+                </div> 
+            </div>
+        </section>
+    </div>
+    <footer class="main-footer">
+        <div class="container main-footer_more-padding">
+            <p class="main-footer_copyright">
+                All other trademarks and copyrights are the property of their respective owners. Use of these names, trademarks and brands does not imply endorsement.
+            </p>
+        </div>
+    </footer>
 </body>
 </html>
